# model_viewer

./: .gitignore  CMakeLists.txt  reqs.txt
common/: shader.cpp  shader.hpp
source/: Light.h  axes.gs.glsl  gridObject.cpp  imgui.ini  main.cpp  menu.cpp  meshFragmentShader.glsl  meshObject.cpp  meshObject.hpp  meshVertexShader.glsl  structs.h  util.h
source/Camera/: Camera.cpp  Camera.h
source/InputManager/: InputManager.cpp  InputManager.h
source/Menu/: Menu.cpp  Menu.h
source/Object/: AxesObject.cpp  AxesObject.h  GridObject.cpp  GridObject.h  LightObject.cpp  LightObject.h  MeshObject.cpp  MeshObject.h  Object.cpp  Object.h
source/Object/AxesObject/: AxesObject.cpp  AxesObject.h
source/Object/GridObject/: GridObject.cpp  GridObject.h
source/Object/LightObject/: LightData.h  LightObject.cpp  LightObject.h
source/Object/MeshObject/: MeshObject.cpp  MeshObject.h
source/Renderer/: Renderer.cpp  Renderer.h
source/Settings/: Settings.cpp  Settings.h
source/ShaderLoader/: ShaderLoader.h
source/shaders/: axes.vs.glsl  grid.vs.glsl  mesh.fs.glsl  mesh.vs.glsl  point.fs.glsl
